# RAG-virtual-assistant

./: .gitignore  README.md  pyproject.toml
src/rag_virtual_assistant/: __init__.py  config.py
src/rag_virtual_assistant/agent/: graph.py
tests/: test_graph.py
