[project]
name = "rag-virtual-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Ruiz", email = "david.ruizcasares@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
rag-virtual-assistant = "rag_virtual_assistant:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
