[project]
name = "rag-virtual-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Ruiz", email = "david.ruizcasares@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "langgraph>=1.2.6",
    "langsmith>=0.9.1",
    "pydantic-settings>=2.14.2",
]

[project.scripts]
rag-virtual-assistant = "rag_virtual_assistant:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
